04_TAD_simples/TAD_00/Resultados/Matheus/ponto/result_compilation.txt
ponto.c:8:8: error: redefinition of ‘struct ponto’
    8 | struct ponto {
      |        ^~~~~
In file included from ponto.c:1:
ponto.h:15:8: note: originally defined here
   15 | struct ponto {
      |        ^~~~~
ponto.c:12:22: error: conflicting types for ‘Ponto’; have ‘struct ponto’
   12 | typedef struct ponto Ponto;
      |                      ^~~~~
ponto.h:19:22: note: previous declaration of ‘Ponto’ with type ‘Ponto’ {aka ‘struct ponto’}
   19 | typedef struct ponto Ponto;
      |                      ^~~~~
ponto.c:19:7: error: conflicting types for ‘pto_cria’; have ‘Ponto(float,  float)’ {aka ‘struct ponto(float,  float)’}
   19 | Ponto pto_cria (float x, float y){
      |       ^~~~~~~~
ponto.h:26:7: note: previous declaration of ‘pto_cria’ with type ‘Ponto(float,  float)’ {aka ‘struct ponto(float,  float)’}
   26 | Ponto pto_cria (float x, float y);
      |       ^~~~~~~~
ponto.c:29:7: error: conflicting types for ‘pto_acessa_x’; have ‘float(Ponto)’ {aka ‘float(struct ponto)’}
   29 | float pto_acessa_x (Ponto p){
      |       ^~~~~~~~~~~~
ponto.h:31:7: note: previous declaration of ‘pto_acessa_x’ with type ‘float(Ponto)’ {aka ‘float(struct ponto)’}
   31 | float pto_acessa_x (Ponto p);
      |       ^~~~~~~~~~~~
ponto.c:36:7: error: conflicting types for ‘pto_acessa_y’; have ‘float(Ponto)’ {aka ‘float(struct ponto)’}
   36 | float pto_acessa_y (Ponto p){
      |       ^~~~~~~~~~~~
ponto.h:36:7: note: previous declaration of ‘pto_acessa_y’ with type ‘float(Ponto)’ {aka ‘float(struct ponto)’}
   36 | float pto_acessa_y (Ponto p);
      |       ^~~~~~~~~~~~
ponto.c:43:7: error: conflicting types for ‘pto_atribui_x’; have ‘Ponto(Ponto,  float)’ {aka ‘struct ponto(struct ponto,  float)’}
   43 | Ponto pto_atribui_x (Ponto p, float x){
      |       ^~~~~~~~~~~~~
ponto.h:41:7: note: previous declaration of ‘pto_atribui_x’ with type ‘Ponto(Ponto,  float)’ {aka ‘struct ponto(struct ponto,  float)’}
   41 | Ponto pto_atribui_x (Ponto p, float x);
      |       ^~~~~~~~~~~~~
ponto.c:51:7: error: conflicting types for ‘pto_atribui_y’; have ‘Ponto(Ponto,  float)’ {aka ‘struct ponto(struct ponto,  float)’}
   51 | Ponto pto_atribui_y (Ponto p, float y){
      |       ^~~~~~~~~~~~~
ponto.h:46:7: note: previous declaration of ‘pto_atribui_y’ with type ‘Ponto(Ponto,  float)’ {aka ‘struct ponto(struct ponto,  float)’}
   46 | Ponto pto_atribui_y (Ponto p, float y);
      |       ^~~~~~~~~~~~~
ponto.c:59:7: error: conflicting types for ‘pto_distancia’; have ‘float(Ponto,  Ponto)’ {aka ‘float(struct ponto,  struct ponto)’}
   59 | float pto_distancia (Ponto p1, Ponto p2){
      |       ^~~~~~~~~~~~~
ponto.h:51:7: note: previous declaration of ‘pto_distancia’ with type ‘float(Ponto,  Ponto)’ {aka ‘float(struct ponto,  struct ponto)’}
   51 | float pto_distancia (Ponto p1, Ponto p2);
      |       ^~~~~~~~~~~~~
